--- a/proposal/Makefile
+++ b/proposal/Makefile
@@ -6,4 +6,4 @@ all: proposal.pdf
 FORCE:
 
 clean:
-	rm -f *.blg *.bbl *.brg *.brf *.pdf *.toc *.log *.fls *.aux *.fdb_latexmk *.out
+	rm -f *.synctex.gz *.blg *.bbl *.brg *.brf *.pdf *.toc *.log *.fls *.aux *.fdb_latexmk *.out
